Bug 150987 - CRASH: pasting content
Summary: CRASH: pasting content
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.3.7 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-09-16 08:32 UTC by Xisco Faulí
Modified: 2022-09-19 13:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["SdrOle2Obj::ImpSetVisAreaSize()"]
Regression By:


Attachments
sample file (237.94 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2022-09-16 08:32 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-09-16 08:32:27 UTC
Created attachment 182487 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Select all in sheet 'Report'
3. Copy
4. Paste

-> Crash

Reproduced in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: e46f9cc4b506c325cbe1060777bbc81fd1630f49
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-09-16 08:40:10 UTC
Regression introduced by:

author	Noel Grandin <noelgrandin@gmail.com>	2019-05-06 11:33:41 +0200
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2019-05-08 12:42:53 +0200
commit d0119ff7f2c68aa05286bd303128f3a69c6bbd6a (patch)
tree 80fc2e52ceb8446997348eda9186cbdfcd247298
parent 5218ca22b472a80969a715e38d7cb8d052be4b6a (diff)
improve tools::Rectangle->basegfx::B2?Rectangle conversion

Bisected with: bibisect-linux64-6.3

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2022-09-16 11:49:04 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab5928517639e49dbcab2c2de195849d611124b9

tdf#150987 calc crash pasting content

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2022-09-19 10:26:39 UTC
Verified in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f0359fb2f01ecf9aed470ae90604f9bd6eec3380
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!
Comment 4 Commit Notification 2022-09-19 13:04:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/8b3d4b35b248c2f52e2bd9d3e77e6d9ce4927daa

tdf#150987 calc crash pasting content

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-09-19 13:04:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/0df8551042fa193a52718ea2f62f7164f3f42bdf

tdf#150987 calc crash pasting content

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.