tdf#150987 calc crash pasting content

regression from

    commit d0119ff7f2c68aa05286bd303128f3a69c6bbd6a
    improve tools::Rectangle->basegfx::B2?Rectangle conversion

which resulted in Fraction throwing an exception because of
divide-by-zero

Change-Id: I90a92a644c5fb40e9b93237c79f6760d4bb73d0f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140064
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>